syntax = "proto3";

package common;

option go_package = "github.com/nmxmxh/master-ovasabi/api/protos/common/v1;commonpb";

import "google/protobuf/struct.proto";
import "common/v1/metadata.proto"; // Assuming this refers to common.Metadata
import "common/v1/payload.proto";  // Assuming this refers to common.Payload

// IntegrationPattern defines a structured, reusable workflow composed of multiple steps.
// This formalizes the JSON-based patterns for machine readability and validation,
// replacing the informal definitions in documentation.
message IntegrationPattern {
  string id = 1;                          // Unique identifier for the pattern (e.g., "identity_unification_pattern").
  string version = 2;                     // Version of the pattern schema.
  string description = 3;                 // Human-readable description of what the pattern does.
  repeated PatternStep steps = 4;         // The sequence of actions that make up the workflow.
  common.Metadata metadata = 5;        // Canonical metadata for orchestration, scheduling, and context.
  common.Payload payload = 6;             // A default or initial payload for the pattern.
}

// PatternStep represents a single action within an IntegrationPattern.
message PatternStep {
  string type = 1; // The service responsible for the action (e.g., "user", "auth").
  string action = 2; // The specific action to perform (e.g., "create_identity").
  google.protobuf.Struct parameters = 3; // Structured parameters for the action.
  repeated string depends_on = 4; // A list of step actions this step depends on.
}